# pjwebsock

./: .clang-format  .editorconfig  .gitignore  BUILD.md  CMakeLists.txt  Makefile  README.md  format.sh  main.c
cert/: gen.sh  test.key  test.pem
tests/: CMakeLists.txt  test.c
websock/: CMakeLists.txt  http.c  http.h  websock.c  websock.h  websock_transport.c  websock_transport.h  websock_transport_tcp.c  websock_transport_tls.c
